--- a/CompRepro_2020.Rmd
+++ b/CompRepro_2020.Rmd
@@ -25,9 +25,18 @@ To add a chunk either click on the green Insert button and choose R or hit Comma
 
 2) Please describe one of the ways that Wilson et. al. suggest is a good practice for computational reproducibility and how a tool like R can be used. Write your answer below.
 
+One practice at which Wilson et. al. finds crucial for computational reproducibility is recording all steps used to process data. This goes to the level of recording every step that was taken to arrive to a certain result. I also find this point particularly important because when someone (e.g. collaborator) receives a script containing a bunch of codes, he/she needs to know the purpose behind each line of code and what it does in order for the computation to make sense. Thus, nothing should be assumed as obvious and everything should have an explanation in the form of a comment, almost to the point it feels like an overkill. This way, it will minimize the confusion and make the computation easier to reproduce. 
+
+Just like lot of other coding languages (e.g. MATLAB, python), R has an ability to write a comment next to ##. The comment functionality should be used at the every step of the code to provide an explanation to oneself and others that are trying to replicate the computation. 
+
 
 3) Add a code chunk and find the square root of 4 to the 13th power. If you are unsure of what command to use, google it. 
 
+```{r}
+sqrt(4^13)
+
+##answer comes out to be 8192
+```
 
 4) Push this homework to the GitHub repository for the homework. 
 
